--- a/class/8-optimization-mle/practice.qmd
+++ b/class/8-optimization-mle/practice.qmd
@@ -96,13 +96,21 @@ Using the starting point $\underline{x}_0 = [1, 1]$ and the step size $\gamma = 
 
 ## In Class Questions 1
 
-1. Write code to read in the `state_abbs.csv` and `state_regions.csv` data files in the "data" folder.
+Read in data:
+
+```{r}
+state_abbs <- read_csv(here::here('data', 'state_abbs.csv')) 
+state_regions <- read_csv(here::here('data', 'state_regions.csv')) 
+wildlife_impacts <- read_csv(here::here('data', 'wildlife_impacts.csv'))
+```
+
+1. Create a new data frame called `state_data` by joining the `state_abbs` and `state_regions` data frames. The result should be a data frame with variables `state_name`, `state_abb`, and `state_region`.
 
 ```{r}
 # Write code here
 ```
 
-2. Create a new data frame called `states` by joining the two data frames `states_abbs` and `state_regions` together. The result should be a data frame with variables `region`, `name`, `abb`.
+2. Join the `state_data` data frame to the `wildlife_impacts` data frame, adding the variables `state_region` and `state_name`.
 
 ```{r}
 # Write code here
